fix horizontal scroll problem

--- a/CSS/queries.css
+++ b/CSS/queries.css
@@ -120,13 +120,12 @@
     bottom: 0;
     width: 100%;
     height: 100vh;
-    display: flex;
     justify-content: center;
     align-items: center;
     transform: translateX(100%);
     transition: all 0.5s ease-in;
 
-    /* display: none; */
+    display: none;
     opacity: 0;
     pointer-events: none;
     visibility: hidden;
@@ -136,13 +135,14 @@
     transform: translateX(0%);
     pointer-events: auto;
     visibility: visible;
+    display: flex;
   }
 
-  .nav-open .icon-mobile-nav[name="close-outline"] {
+  .nav-open .icon-mobile-nav[name='close-outline'] {
     display: block;
   }
 
-  .nav-open .icon-mobile-nav[name="menu-outline"] {
+  .nav-open .icon-mobile-nav[name='menu-outline'] {
     display: none;
   }
 
